--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 body {
-    width: 250px;
-    height: 250px;
-    background-color: aliceblue;
-    display: flex;
-    justify-content: center;
+  width: 250px;
+  height: 250px;
+  background-color: pink;
+  display: flex;
+  justify-content: center;
 }
 
 p {
-    display: inner-flex;
-    margin: auto 10px;
-    font-size: 22px;
-    color: rgb(19, 85, 228);
-    border-radius: 6px;
-    border: 1px solid lightblue;
-    padding: 10px;
+  display: inner-flex;
+  margin: auto 10px;
+  font-size: 22px;
+  color: #0d1137;
+  border-radius: 6px;
+  border: 1px solid #0d1137;
+  padding: 10px;
 }
